fix a little too wider selector

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -124,7 +124,7 @@ body > .container{
             margin-left: 0;
         }
     }
-    .image{margin-bottom: 1em;}
+    article .image{margin-bottom: 1em;}
     .teal:not(i){background-color: $mountain-meadow !important}
     .blue:not(i){background-color: $medium-slate-blue !important}
     .label{margin-top:.5em;}
